fix: fix docs
